fix warn and contrast/label/alt missing

--- a/client/src/components/Posts/_card.scss
+++ b/client/src/components/Posts/_card.scss
@@ -156,9 +156,10 @@
         .timeStamp {
           font-style: italic;
           font-family: $font-1;
-          color: white;
+          color: $color-4;
+          filter: brightness(100%);
           position: absolute;
-          padding-right: 5%;
+          padding-right: 2%;
           right: 0%;
           top: 0%;
 
